explain contribution part1+ some modifications

--- a/biblo.bib
+++ b/biblo.bib
@@ -606,3 +606,90 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   title = {Introduction {$\cdot$} {{Bootstrap}} v5.0},
   howpublished = {https://getbootstrap.com/docs/5.0/getting-started/introduction/}
 }
+
+@misc{DataVisualisationMicrosoft,
+  title = {Data {{Visualisation}} | {{Microsoft Power BI}}},
+  howpublished = {https://powerbi.microsoft.com/en-au/},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\B2JS3NIV\\en-au.html}
+}
+
+
+@misc{robbPowerBIVs2022,
+  title = {Power {{BI}} vs. {{Tableau}}: 2022 {{Software Comparison}}},
+  shorttitle = {Power {{BI}} vs. {{Tableau}}},
+  author = {Robb, Drew},
+  year = {2022},
+  month = feb,
+  journal = {eWEEK},
+  abstract = {Power BI and Tableau are both leaders in the analytics and BI sector. But which is best in terms of features, pricing, use case, and applications?},
+  howpublished = {https://www.eweek.com/big-data-and-analytics/power-bi-vs-tableau/},
+  langid = {american},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\XUYAXBTW\\power-bi-vs-tableau.html}
+}
+
+@misc{WhatCSSLearn,
+  title = {What Is {{CSS}}? - {{Learn}} Web Development | {{MDN}}},
+  shorttitle = {What Is {{CSS}}?},
+  abstract = {You made it to the end of the article! Now that you have some understanding of what CSS is, let's move on to Getting started with CSS, where you can start to write some CSS yourself.},
+  howpublished = {https://developer.mozilla.org/en-US/docs/Learn/CSS/First\_steps/What\_is\_CSS},
+  langid = {american},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\KSERS5UL\\What_is_CSS.html}
+}
+
+
+@article{CSS2022,
+  title = {{{CSS}}},
+  year = {2022},
+  month = may,
+  journal = {Wikipedia},
+  abstract = {Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page load speed between the pages that share the file and its formatting. Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element. This cascading priority scheme is predictable. The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML, SVG, and XUL.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1089152454},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\9MWYZRN9\\CSS.html}
+}
+
+
+@misc{contributorsGetStartedBootstrap,
+  title = {Get Started with {{Bootstrap}}},
+  author = {{contributors}, Jacob Thornton, {and} Bootstrap, Mark Otto},
+  abstract = {Bootstrap is a powerful, feature-packed frontend toolkit. Build anything\textemdash from prototype to production\textemdash in minutes.},
+  howpublished = {https://getbootstrap.com/docs/5.2/getting-started/introduction/},
+  langid = {english},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\PK59DV3T\\introduction.html}
+}
+
+
+
+@misc{JavaScriptCom,
+  title = {{{JavaScript}}.Com},
+  abstract = {JavaScript.com is a resource for the JavaScript community. You will find resources and examples for JavaScript beginners as well as support for JavaScript experts. Learn JavaScript or free with our easy to use input output machine.},
+  howpublished = {https://www.javascript.com/},
+  langid = {english},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\YXAQ2J2I\\www.javascript.com.html}
+}
+
+
+
+
+@article{Kaggle2022,
+  title = {Kaggle},
+  year = {2022},
+  month = may,
+  journal = {Wikipedia},
+  abstract = {Kaggle, a subsidiary of Google LLC, is an online community of data scientists and machine learning practitioners. Kaggle allows users to find and publish data sets, explore and build models in a web-based data-science environment, work with other data scientists and machine learning engineers, and enter competitions to solve data science challenges.  Kaggle got its start in 2010 by offering machine learning competitions and now also offers a public data platform, a cloud-based workbench for data science, and Artificial Intelligence education. Its key personnel were Anthony Goldbloom and Jeremy Howard. Nicholas Gruen was founding chair succeeded by Max Levchin. Equity was raised in 2011 valuing the company at \$25.2 million. On 8 March 2017, Google announced that they were acquiring Kaggle.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1088800559},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\AWZ6WYV3\\Kaggle.html}
+}
+
+
+
+@misc{KaggleYourHome,
+  title = {Kaggle: {{Your Home}} for {{Data Science}}},
+  howpublished = {https://www.kaggle.com/},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\ULKPVIU4\\www.kaggle.com.html}
+}
+
+
