--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,8 @@ pdfkeywords={Visualization; Medical data; Graphical Representation; Modeling; XM
 
 \providecommand{\keywordFR}[1]{\textbf{\textit{Mots clés---}} #1}
 %%%%%%%%%%%%%%%%%%%%%%%
-
+\setcounter{tocdepth}{4}
+\setcounter{secnumdepth}{4}
 \newcommand{\comment}[1]{}
 \begin{document}
 \input{parts/pageTitePage.tex}
