--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -40,19 +40,21 @@ Health Data Management is the practice of making sense of this data and managing
     \item \textbf{\textit{Changes to data:}} medical data constantly changes as do the names, professions, locations and conditions of patients and physicians. Patients undergo numerous tests and are administered many types of treatment over the years, and the treatments and medications themselves evolve over time. New types of medical treatment, such as telehealth models, create new types of data.
     \item \textbf{\textit{Regulations and compliance:}} medical data is sensitive and must adhere to government regulations, such as the USA Health Insurance Portability and Accountability Act (HIPAA). Data discovery challenges and poor data quality make it much more difficult to perform the required audits and meet regulatory requirements and limits the diversity of data healthcare providers can use for the benefit of patients.
   \end{itemize}
+  \bigbreak
+  In short, these challenges together with the lack of data management systems that provide the right insights to the right actors constitute an obstacle to the development of medical informatics.
 
 
 
 
 \section{Purpose \& delimitations}
 
-The goal of this work is to design a visualization system for medical data in a conventional common language between the different health actors.
+The goal of this work is to design a visualization system in medical healthcare that provides personalized dashboards and insights for medical actors in a conventional common language.
  
-We intend to achieve our goal by designing a warehouse system that brings  data from different sources together, and structures it using the eXtensible Markup Language (XML).
+We intend to achieve our goal by designing a visualization system that manages data from different sources, and structures it using the eXtensible Markup Language (XML) then provides a personalized dashboard for each actor.
  \newline
- \textbf{First}, we created a data warehouse that takes care of the data integration.\newline 
- \textbf{Second}, we integrated the focus data in a structured form using XML.\newline
- \textbf{Third}, we designed a visual presentation after the data processing and formatting.
+ \textbf{First}, we created a data integration system that takes care of the data management.\newline 
+ \textbf{Second}, we transformed the focus data to a structured format using XML.\newline
+ \textbf{Third}, we designed a visual presentation after the data processing and formatting (a dashboard application).
 
  
 \section{Document structure}
@@ -62,6 +64,8 @@ In Chapter 2: Health sector \& Data, we present the healthcare environment inclu
  
 In chapter 3: Information Visualization, we present its definition, then we explain the visualization pipeline: how it deals with data, then we move to the data warehouse and its data integration approaches.
  
- Next comes chapter 4: Contribution \& Discussion, we talk about the work objectives then we go through several related work reviews and then present the proposed work. Chapter 5: Implementation, a chapter about the implementation of the system, which tools are introduced and results are displayed using screenshots and diagrams.
+ Next comes chapter 4: Contribution \& Discussion, we talk about the work objectives then we go through several related work reviews and then present the proposed work. 
  
-Finally, in chapter 5: Conclusion \& Future work, the results and insights gained through the journey of making the proposed solution, few conclusions drawn and perspectives on what could be enhanced moving forward with this project.
+ Chapter 5: Implementation, a chapter about the implementation of the system, which tools are introduced and results are displayed using screenshots and diagrams.
+ 
+Finally, in chapter 6: Conclusion \& Future work, the results and insights gained through the journey of making the proposed solution, few conclusions drawn and perspectives on what could be enhanced moving forward with this project.
