--- a/parts/pageTitePage.tex
+++ b/parts/pageTitePage.tex
@@ -2,6 +2,9 @@
     \begin{center}
         MASTER DEGREE OF DATA \& INFORMATION SYSTEMS
         \vspace*{1cm}
+        \\Department of Computer Science\\
+        University of Science and Technology of Oran - Mohamed Boudiaf\\
+        Oran, Algeria\\
  
         {\large
         \textbf{Visualisation of health data in a medical sector}}
